[package]
name = "shield-db"
version = "0.1.0"
authors = ["Dot HQ <contact@dothq.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# Serde
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# Progress bar for ui
linya = "0.1"
